tests/NormalTests/paczka1/small_fuzzy/49127316.err
Error in line 7: tcmKcVDWDI A323 92,0
Error in line 1: uYjmtwGEsEn A323 82,2
